k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vote-ui
  name: vote-ui
spec:
  type: ClusterIP
  ports:
    - name: 8080-tcp
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: https
      protocol: TCP
      port: 443
      targetPort: 8080
  selector:
    app: vote-ui
