k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: vote-ui
  name: vote-ui
spec:
  #port:
  #  targetPort: 8080-tcp
  to:
    kind: Service
    name: vote-ui
    weight: 100
  tls:
    termination: edge
